// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConceptListItem should match previous snapshot 1`] = `
<styled.li
  borderTop="solid 1px #DBD9D2"
  display="grid"
  gridGap="1em"
  paddingTop="2em"
>
  <Paragon
    lineHeight="initial"
    margin={0}
    tag="h2"
    textTransform="capitalize"
  >
    abcd
  </Paragon>
  <BodyCopy
    lineHeight="initial"
    margin={0}
  >
    dummy description
  </BodyCopy>
  <OutlinedLinkButton
    hoverBg="#F5F5F2"
    justifySelf="start"
  >
    <Link
      to="/concepts/abcd"
    >
      concepts.links.start
    </Link>
  </OutlinedLinkButton>
  <styled.ul
    display="flex"
    flexWrap="wrap"
    gridGap="1em 1.5em"
    listStyle="none"
    marginTop="2em"
    padding={0}
  />
</styled.li>
`;

exports[`ConceptListItem should match previous snapshot with lessons 1`] = `
<styled.li
  borderTop="solid 1px #DBD9D2"
  display="grid"
  gridGap="1em"
  paddingTop="2em"
>
  <Paragon
    lineHeight="initial"
    margin={0}
    tag="h2"
    textTransform="capitalize"
  >
    abcd
  </Paragon>
  <BodyCopy
    lineHeight="initial"
    margin={0}
  >
    dummy description
  </BodyCopy>
  <OutlinedLinkButton
    hoverBg="#F5F5F2"
    justifySelf="start"
  >
    <Link
      to="/concepts/abcd"
    >
      concepts.links.start
    </Link>
  </OutlinedLinkButton>
  <styled.ul
    display="flex"
    flexWrap="wrap"
    gridGap="1em 1.5em"
    listStyle="none"
    marginTop="2em"
    padding={0}
  >
    <LessonListItem
      conceptId="abcd"
      description="Lorem ipsum dolor sit amet."
      disabled={false}
      id="1"
      key="1"
      t={[Function]}
      title="lesson 1"
    />
    <LessonListItem
      conceptId="abcd"
      description="Lorem ipsum dolor sit amet."
      disabled={false}
      id="2"
      key="2"
      t={[Function]}
      title="lesson 2"
    />
    <LessonListItem
      conceptId="abcd"
      description="Lorem ipsum dolor sit amet."
      disabled={false}
      id="3"
      key="3"
      t={[Function]}
      title="lesson 3"
    />
  </styled.ul>
</styled.li>
`;
